tests/baselines/reference/typeArgumentInferenceWithConstraintAsCommonRoot.errors.txt
tests/cases/compiler/typeArgumentInferenceWithConstraintAsCommonRoot.ts(7,1): error TS2448: The type argument for type parameter 'T' cannot be inferred from the usage. Try specifying the type arguments explicitly.


==== tests/cases/compiler/typeArgumentInferenceWithConstraintAsCommonRoot.ts (1 errors) ====
    interface Animal { x }
    interface Giraffe extends Animal { y }
    interface Elephant extends Animal { z }
    function f<T extends Animal>(x: T, y: T): T { return undefined; }
    var g: Giraffe;
    var e: Elephant;
    f(g, e); // valid because both Giraffe and Elephant satisfy the constraint. T is Animal
    ~
!!! error TS2448: The type argument for type parameter 'T' cannot be inferred from the usage. Try specifying the type arguments explicitly.